--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
 /* -------  General Styles ------- */
 
+html,
+body {
+  overflow-x: hidden;
+  margin: 0;
+}
+
 body {
   font-family: "Lato", sans-serif;
   color: #6b1a22;
-  margin: 0;
 }
 
 h2 {
@@ -62,18 +67,20 @@ header {
 
 .logo {
   font-family: "Tangerine", cursive;
-  font-size: 72px;
+  font-size: 50px;
+  margin-top: 20px;
   color: #ecdbc9;
 }
 
 header nav {
   display: flex;
   justify-content: center;
+  padding: 10px;
 }
 
 header nav ul {
   display: flex;
-  padding-left: 0;
+  padding-left: 0px;
 }
 
 header nav ul li {
@@ -98,22 +105,24 @@ header nav ul li a:hover {
 
 form {
   border: 2px solid #6b1a22;
-  padding: 10px;
+  padding: 5px;
 }
 
 .form-field {
   display: flex;
   justify-content: space-between;
+  margin-top: 10px;
 }
 
 form label {
   font-weight: bold;
+  font-size: 15px;
 }
 
 form select,
 form input {
   margin-bottom: 20px;
-  width: 180px;
+  width: 100px;
 }
 
 form button {
@@ -163,10 +172,14 @@ footer p {
 
 /* -------  Media Query ------- */
 @media all and (min-width: 480px) {
+  .logo {
+    font-size: 45px;
+  }
+
   header {
     display: flex;
     justify-content: space-between;
-    padding: 0 30px;
+    padding: 0px 30px;
   }
 
   header h1 {
@@ -188,6 +201,10 @@ footer p {
     align-self: center;
   }
 
+  form input {
+    width: 30%;
+  }
+
   .item {
     flex: 1;
   }
@@ -196,11 +213,13 @@ footer p {
     flex: 2;
   }
 
-  .blog-group {
+  .blog-group,
+  .about-group {
     flex-wrap: wrap;
   }
 
   .blog-item {
     flex: 1 0 33%;
   }
+  
 }
